--- a/style.css
+++ b/style.css
@@ -1,80 +1,89 @@
-body{
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, #885e98 86%);
+body {
+    background: rgb(34, 193, 195);
+    background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, #8a6499 86%);
     background-attachment: fixed;
-    margin:0;
-    font-family: 'Poppins', sans-serif; 
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
-    #form{
-        width: 300px;
-        margin:15vh auto 0 auto;
-        background-color: whitesmoke;
-        border-radius: 5px;
-        padding:30px;
+
+#form {
+    width: 400px;
     
-    }
-    h1{
-        text-align: center;
-        color: #4e0d66  ;
-    }
-    #form button{
+    margin: 15vh auto 0 auto;
+    background-color: #40759c;
+    border-radius: 5px;
+    padding: 30px;
+
+}
+
+h1 {
+    text-align: center;
+    color: #4e0d66;
+}
+
+#form button {
     background-color: #792099;
-    color:white;
+    color: white;
     border: 1px solid #792099;
     border-radius: 5px;
-    padding:10px;
-    margin:20px 0px;
-    cursor:pointer;
-    font-size:20px;
-    width:80%;
+    padding: 10px;
+    margin: 20px 0px;
+    cursor: pointer;
+    font-size: 20px;
+    width: 80%;
 
 
-   
+
 
 
 
 }
-.input-group{
-    display:flex;
+
+.input-group {
+    display: flex;
     flex-direction: column;
     margin-bottom: 15px;
 }
-.input-group input{
+
+.input-group input {
     border-radius: 5px;
-    font-size:20px;
-    margin-top:5px;
-    padding:10px;
-    border:1px solid rgb(34,193,195);
+    font-size: 20px;
+    margin-top: 5px;
+    padding: 10px;
+    border: 1px solid rgb(34, 193, 195);
 }
-.input-group input:focus{
-    outline:0;
+
+.input-group input:focus {
+    outline: 0;
 }
-.input-group.success input{
+
+.input-group.success input {
     border-color: #0cc477;
 }
-.input-group.error input{
-    border-color:rgb(206, 67, 67);
+
+.input-group.error input {
+    border-color: rgb(206, 67, 67);
 }
 
-.container{
+#container {
     display: flex;
-    flex-direction:row; 
+    flex-direction: row;
     flex-wrap: wrap;
     border: 1px solid none;
-    padding :50px;
-    box-shadow: 10px 10px 5px 12px lightblue;
+    padding: 50px;
+    box-shadow: 10px 10px 5px 12px rgb(5, 137, 181);
 }
 
 
-  
-
-   
-    /* flex-direction :column; */
 
 
 
+/* flex-direction :column; */
 
-#start-game{
+
+
+
+#start-game {
     flex-direction: row;
     align-items: center;
     position: absolute;
@@ -82,17 +91,24 @@ body{
     padding-top: 200px;
 }
 
-#start-btn{
+#start-btn {
     background-color: #d59aea;
     border-radius: 5px;
     text-align: center;
     margin: 10px;
 }
 
-#questioncontainer{
-    border: 1px solid black;
-    width :500px;
-    height:500px;
+#questioncontainer {
+    border: 1px solid rgb(0, 0, 0);
+     background: linear-gradient(0deg, rgba(34, 193, 195, 1) 0%, #8a6499 86%);
+    width: 500px;
+    height: 500px;
     align-items: center;
+}
+
+
+.display {
+    color: purple;
+    font-weight: bold;
 
 }
