--- a/style.css
+++ b/style.css
@@ -6,35 +6,48 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-#form {
+/* #form {
     width: 400px;
-    
     margin: 15vh auto 0 auto;
     background-color: #d6e4db;
     border-radius: 5px;
-    padding: 30px;
+    padding: 20px;
+    position: absolute;
+     */
 
-}
+
+
+
 
 h1 {
     text-align: center;
     color: #4e0d66;
 }
 
-#form button {
+#form1 button {
     background-color: lab(45.81% -39.63 19.67);
     color: white;
     border: 1px solid #99df85;
     border-radius: 5px;
-    padding: 10px;
-    margin: 20px 0px;
+    padding: 5px;
+    margin: 1px 0px;
     cursor: pointer;
     font-size: 20px;
     width: 80%;
 
-
-
 }
+.btn {
+    background-color: rgb(15, 95, 46);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+
+
 
 .input-group {
     display: flex;
@@ -42,25 +55,41 @@ h1 {
     margin-bottom: 15px;
 }
 
-input {
+#input {
     border-radius: 10px;
     font-size: 20px;
     margin-top: 5px;
     padding: 10px;
     border: 1px solid rgb(93, 100, 100);
-    background-color: #e6ecf1;
+    background-color: #91a097;
     
 }
 
-#container {
+
+
+.main{
+    display: flexbox;
+    justify-items: center;
+}
+ .container_1{
+ display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    border: 1px solid none;
+    padding: 20px;
+    width: 500px;
+    margin-top: 50px;
+
+    box-shadow: 10px 10px 5px 12px rgb(59, 72, 58);
+ }       
+ 
+ #container_2 {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     border: 1px solid none;
     padding: 50px;
     box-shadow: 10px 10px 5px 12px rgb(78, 185, 70);
-}
-
+ }
 
 /* flex-direction :column; */
 
@@ -72,22 +101,23 @@ input {
     padding-top: 200px;
 } */
 
-#start-btn {
-    background-color: #d59aea;
+#submitbtn {
+    background-color: #b2a6b7;
     border-radius: 5px;
     text-align: center;
-    margin: 10px;
+    margin: auto;
+    align-items: center;
 }
 
 
 
-#questioncontainer {
+/* .questioncontainer {
     border: 1px solid rgb(0, 0, 0);
      background: linear-gradient(0deg, rgb(0, 0, 0) 0%, #5ac285 86%);
     width: 500px;
     height: 500px;
     align-items: center;
-}
+} */
 
 
 .display {
@@ -97,5 +127,3 @@ input {
 
 }
 
-
-           
