--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ body {
 
 
 h1 {
-    text-align: center;
+    
     color: #4e0d66;
+    /* font-size: 15px; */
 }
 
 #form1 button {
@@ -39,28 +40,25 @@ h1 {
 .btn {
     background-color: rgb(15, 95, 46);
     color: white;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 15px;
+  text-align: center;
+  margin-left: 200px;
+  margin-top: 5px;
+
 }
 
 
-
-
-.input-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
-}
 
 #input {
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: 20px;
-    margin-top: 5px;
+    /* margin-top: 2px; */
     padding: 10px;
-    border: 1px solid rgb(93, 100, 100);
+    border: 1px solid r0b(93, 100, 100);
     background-color: #91a097;
     
 }
@@ -76,11 +74,11 @@ h1 {
     flex-direction: column;
     flex-wrap: wrap;
     border: 1px solid none;
-    padding: 20px;
+    padding: 10px;
     width: 500px;
-    margin-top: 50px;
+    margin-top: 30px;
 
-    box-shadow: 10px 10px 5px 12px rgb(59, 72, 58);
+    box-shadow: 5px 5px 5px 10px rgb(59, 72, 58);
  }       
  
  #container_2 {
@@ -91,15 +89,6 @@ h1 {
     box-shadow: 10px 10px 5px 12px rgb(78, 185, 70);
  }
 
-/* flex-direction :column; */
-
-/* #start-game {
-    flex-direction: row;
-    align-items: center;
-    position: absolute;
-    padding-left: 100px;
-    padding-top: 200px;
-} */
 
 #submitbtn {
     background-color: #b2a6b7;
@@ -111,13 +100,6 @@ h1 {
 
 
 
-/* .questioncontainer {
-    border: 1px solid rgb(0, 0, 0);
-     background: linear-gradient(0deg, rgb(0, 0, 0) 0%, #5ac285 86%);
-    width: 500px;
-    height: 500px;
-    align-items: center;
-} */
 
 
 .display {
