--- a/style.css
+++ b/style.css
@@ -6,15 +6,11 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
-/* #form {
-    width: 400px;
-    margin: 15vh auto 0 auto;
-    background-color: #d6e4db;
-    border-radius: 5px;
-    padding: 20px;
-    position: absolute;
-     */
+#login{
+    padding: auto;
+    margin: 2px;
 
+}
 
 
 
@@ -31,10 +27,10 @@ h1 {
     border: 1px solid #99df85;
     border-radius: 5px;
     padding: 5px;
-    margin: 1px 0px;
+    margin: zpx 0px;
     cursor: pointer;
     font-size: 20px;
-    width: 80%;
+    width: 100%;
 
 }
 .btn {
@@ -66,6 +62,7 @@ h1 {
 
 
 .main{
+
     display: flexbox;
     justify-items: center;
 }
